@@ -560,3 +560,6 @@ class ProtCryoSparcLocalRefine(ProtCryosparcBase, ProtOperateParticles):
                          "An error occurred in the local refinement process. "
                          "Please, go to cryosPARC software for more "
                          "details.")
+        print(pwutils.yellowStr("Removing intermediate results..."), flush=True)
+        self.clearIntResults = clearIntermediateResults(self.projectName.get(),
+                                                        self.runLocalRefinement.get())
