@@ -307,6 +307,9 @@ class ProtCryoSparcNonUniformRefine3D(ProtCryoSparcRefine3D):
                          "An error occurred in the Refinement process. "
                          "Please, go to cryosPARC software for more "
                          "details.")
+        print(pwutils.yellowStr("Removing intermediate results..."), flush=True)
+        self.clearIntResults = clearIntermediateResults(self.projectName.get(),
+                                                        self.runRefine.get())
 
 
 
