@@ -299,3 +299,6 @@ class ProtCryoSparcSubtract(ProtCryosparcBase, ProtOperateParticles):
                          "An error occurred in the particles subtraction process. "
                          "Please, go to cryosPARC software for more "
                          "details.")
+        print(pwutils.yellowStr("Removing intermediate results..."), flush=True)
+        self.clearIntResults = clearIntermediateResults(self.projectName.get(),
+                                                        self.runPartStract.get())
