@@ -241,3 +241,6 @@ class ProtCryoSparcSharppening(ProtCryosparcBase, ProtAnalysis3D):
                          "An error occurred in the particles subtraction process. "
                          "Please, go to cryosPARC software for more "
                          "details.")
+        print(pwutils.yellowStr("Removing intermediate results..."), flush=True)
+        self.clearIntResults = clearIntermediateResults(self.projectName.get(),
+                                                        self.runSharppening.get())
