@@ -1,3 +1,4 @@
+Dec 18, 2020  - Cleaning intermediates results
 Dec 14, 2020  - Fixing some bugs taking the las iteration in the 2D classification
 Apr 10, 2020  - Create a protocol base, Clean the code
 Apr  4, 2020  - Add the use of multiple GPUs
